<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Signup">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="104dp"
            android:text="@string/sign_up_text"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/hint_email"
            android:layout_width="260dp"
            android:layout_height="37dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.264"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email_text"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/hint_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/password_text"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/hint_password"
            android:layout_width="260dp"
            android:layout_height="39dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.264"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.908" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:layout_marginBottom="280dp"
            android:text="@string/sign_up_button"
            android:textColorHighlight="@color/text"
            app:backgroundTint="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="330dp"
            android:layout_height="37dp"
            android:layout_marginBottom="32dp"
            android:text="@string/sing_up_checkbox"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/signupBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>